add shader and shader program wrapers; add basic vertex and fragment shaders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,30 @@ endif()
 find_package(GLFW REQUIRED)
 include_directories(${GLFW_INCLUDE_DIR})
 
-set (HEADERS)
-set (SOURCES 
-        "src/main.cpp"
-        "src/vec2.cpp"
-		"src/input.cpp"
-		"src/window.cpp"
-    )
+set (HEADERS
+	"include/vse/window.hpp"
+	"include/vse/input.hpp"
+	"include/vse/vec2.hpp"
+	"include/vse/shader.hpp"
+	"include/vse/program.hpp"
+)
 
-add_executable(vse ${HEADERS} ${SOURCES})
+set (SOURCES 
+    "src/main.cpp"
+    "src/vec2.cpp"
+	"src/input.cpp"
+	"src/window.cpp"
+	"src/shader.cpp"
+	"src/program.cpp"
+)
+
+# just so they appear in VS project
+set (SHADERS
+	"shaders/basic.sv"
+	"shaders/basic.sf"
+)
+
+add_executable(vse ${HEADERS} ${SOURCES} ${SHADERS})
 
 
 if (MSVC)
