--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set (HEADERS)
 set (SOURCES 
         "src/main.cpp"
         "src/vec2.cpp"
+        "src/mat4.cpp"
 		"src/input.cpp"
 		"src/window.cpp"
     )
