--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ set (SOURCES
         "src/main.cpp"
         "src/vec2.cpp"
         "src/mat4.cpp"
+        "src/mat_utils.cpp"
 		"src/input.cpp"
 		"src/window.cpp"
     )
