fix invalid header names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ set (HEADERS
 	"include/vse/window.hpp"
 	"include/vse/input.hpp"
 	"include/vse/vec2.hpp"
-  "include/vse/mat4.cpp"
-  "include/vse/mat_utils.cpp"
+    "include/vse/mat4.hpp"
+    "include/vse/mat_utils.hpp"
 	"include/vse/shader.hpp"
 	"include/vse/program.hpp"
 	"include/vse/buffer.hpp"
@@ -30,13 +30,13 @@ set (SOURCES
   "src/vec2.cpp"
   "src/mat4.cpp"
   "src/mat_utils.cpp"
-	"src/input.cpp"
-	"src/window.cpp"
-	"src/shader.cpp"
-	"src/program.cpp"
-	"src/buffer.cpp"
-	"src/vao.cpp"
-	"src/shapes.cpp"
+  "src/input.cpp"
+  "src/window.cpp"
+  "src/shader.cpp"
+  "src/program.cpp"
+  "src/buffer.cpp"
+  "src/vao.cpp"
+  "src/shapes.cpp"
 )
 
 # just so they appear in VS project
