--- a/sb/CMakeLists.txt
+++ b/sb/CMakeLists.txt
@@ -18,5 +18,5 @@ endif()
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
     "${CMAKE_CURRENT_SOURCE_DIR}/shaders"
-    ${CMAKE_BINARY_DIR}/shaders/
+    $<TARGET_FILE_DIR:${PROJECT_NAME}>/shaders/
 )
