create basic RenderSystem

--- a/sb/CMakeLists.txt
+++ b/sb/CMakeLists.txt
@@ -1,12 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 project (sb)
 
-set (SOURCES
-  "src/main.cpp"
-  "src/components/transform.hpp"
-  "src/systems/TransformationSystem.cpp"
-  "src/systems/TransformationSystem.hpp"
-)
+file (GLOB_RECURSE SOURCES "src/" "*.[hc]pp")
 
 file (GLOB SHADERS "shaders/*")
 
@@ -20,6 +15,8 @@ if (MSVC)
 else()
     target_compile_options (${PROJECT_NAME}  PRIVATE -std=c++14 -Wall -Wextra -Wpedantic -Wfatal-errors)
 endif()
+
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES} ${SHADERS})
 
 add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
